--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="truck.css">
+    <link rel="icon" href="photo/logo2.png">
 
 </head>
 <body onload="myFunction()">
