--- a/upload.html
+++ b/upload.html
@@ -8,6 +8,7 @@
   <title>Upload Notes</title>
   <link rel="stylesheet" href="css/main.css"/>
   <link rel="stylesheet" href="css/upload.css"/>
+  <link rel="icon" href="photo/logo2.png">
 </head>
 <body onload="myFunction()">
   <div id="loader">
