--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="photo/logo2.png">
 </head>
 <body onload="myFunction()">
     
