file name and footer

--- a/footer.html
+++ b/footer.html
@@ -16,7 +16,7 @@
         <h1>Dayanand Sciecne College, Latur</h1>
         <address>
           Khadgaon Road, <br />
-          Near Shivaji Maharaj Chowk, <br />
+          Near Chatrapati Shivaji Maharaj Chowk, <br />
           Latur - 413512
         </address>
       </div>
