--- a/upload.html
+++ b/upload.html
@@ -81,7 +81,7 @@
             <label for="msg"><i class="fa fa-envelope"> </i> Content Inside The Notes:</label>
             <textarea id="msg" name="msg" placeholder="Write something.." style="height: 170px"></textarea><br /><br />
             <input type="file" id="actual-btn" hidden />
-            <label for="actual-btn" id="file-label"><i class="fa fa-file"></i> Choose File</label><br /><br /><br />
+            <label for="actual-btn" id="file-label"><i class="fa fa-file"></i> Choose File</label><span id="choose"></span><br /><br /><br />
             <button class="glow"><i class="fa fa-cloud"></i> Upload</button>
           </form>
         </div>
