updated footer icons

--- a/footer.html
+++ b/footer.html
@@ -36,6 +36,7 @@
 
     <div class="box-2">
       <ul>
+        <div>
         <li>
           <a target="_blank" href="mailto:daya_scin1@rediffmail.com"><i class="fa fa-envelope"></i></a>
         </li>
@@ -45,7 +46,8 @@
         <li>
           <a target="_blank" href="https://www.instagram.com/onlinedsclatur"><i class="fa fa-instagram"></i></a>
         </li>
-        <li>
+      </div>
+        <div>        <li>
           <a target="_blank" href="https://www.facebook.com/DSCLOfficial/"><i class="fa fa-facebook"></i></a>
         </li>
         <li>
@@ -54,6 +56,8 @@
         <li>
           <a target="_blank" href="https://in.linkedin.com/company/dayanandscience"><i class="fa fa-linkedin"></i></a>
         </li>
+      </div>
+
 
       </ul>
     </div>
