footer icons changed

--- a/footer.html
+++ b/footer.html
@@ -48,7 +48,7 @@
         </li>
       </div>
         <div>        <li>
-          <a target="_blank" href="https://www.facebook.com/DSCLOfficial/"><i class="fa fa-facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/DSCLOfficial/"><i id="width-padding" class="fa fa-facebook"></i></a>
         </li>
         <li>
           <a target="_blank" href="https://twitter.com/dsclatur"><i class="fa fa-twitter"></i></a>
