--- a/upload.html
+++ b/upload.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Upload Notes</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css"/>
   <link rel="stylesheet" href="css/upload.css"/>
   <link rel="icon" href="photo/logo2.png">
@@ -90,7 +91,9 @@
 
     <div footer-html="footer.html"></div>
     </div>
+
     <script src="script/script.js"></script>
+    <script src="script/upload.js"></script>
   </body>
 
   </html>
