--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
         
         <tr>
           <td>02</td>
-          <td>Mamata Chaodhari</td>
+          <td>Mamata Choudhari</td>
           <td></td>
         </tr>
         
