--- a/about.html
+++ b/about.html
@@ -60,6 +60,7 @@
     </nav>
 </div>
 
+
     <div class="main-img">
         <h2>About Us</h2>
         <p>We Are Here To Save Your Valuable Time...</p>
@@ -67,6 +68,9 @@
 
     <main>
       
+    <div class="heading">
+      <h1>"Join the revolution of open education - our notes are just the beginning!"</h1>
+    </div>
       <div class="container-3">
         <h1>About Us</h1>
         <p> &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;We are a group of students who are passionate about sharing knowledge and making education accessible to all. We collect notes from other students and provide them to everyone, free of cost, through a website that we have created. <br><br>
@@ -79,9 +83,6 @@
         <iframe width="100%" height="506" src="https://www.youtube.com/embed/y5-wfOiMSdE" title="Dayanand Science College, Latur, Maharashtra, India." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
         </div>
         
-        <div class="container-2">
-          "Join the revolution of open education - our notes are just the beginning!"
-        </div>
 
 
     <div class="table">
@@ -162,7 +163,7 @@
         <tr>
           <td>13</td>
           <td>Shamkumar Dixit</td>
-          <td><a href="mailto:www.pavanmortale111@gmail.com"><i class="fa fa-envelope"></i></a></td>
+          <td><a href="mailto:www.Shamdixit5@gmail.com"><i class="fa fa-envelope"></i></a></td>
         </tr>
       </table>
     </div>
