updated font awsome

--- a/footer.html
+++ b/footer.html
@@ -38,7 +38,7 @@
       <ul>
         <div>
         <li>
-          <a target="_blank" href="mailto:daya_scin1@rediffmail.com"><i class="fa fa-envelope"></i></a>
+          <a target="_blank" href="mailto:daya_scin1@rediffmail.com"><i class="fa fa-sandesh"></i></a>
         </li>
         <li>
           <a target="_blank" href="tel:+91238221149"><i class="fa fa-phone"></i></a>
