--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dayanand Science College, Latur</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="photo/logo2.png">
@@ -79,9 +79,9 @@
             <input type="text" id="name" name="name" placeholder="Your name.." required>
             <label for="mno"><i class="fa fa-phone"> </i> Mobile No</label>
             <input type="number" maxlength="10" min="10"  id="mno" name="mno" placeholder="Mobile No.."  oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" required >
-            <label for="email"><i class="fa fa-envelope"> </i> Email Id</label>
+            <label for="email"><i class="fa fa-sandesh"> </i> Email Id</label>
             <input type="email" id="email" name="email" placeholder="Your email id.." required>
-            <label for="msg"><i class="fa fa-envelope"> </i> Message</label>
+            <label for="msg"><i class="fa fa-sandesh"> </i> Message</label>
             <textarea id="msg" name="msg" placeholder="Write something.." style="height:170px"></textarea>
             <button class="glow">Submit</button>
           </form>
