--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dayanand Science College, Latur</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="photo/logo2.png">
@@ -84,7 +84,7 @@
       </div>
     </div>
 
-    <section class="testimonials">
+    <!-- <section class="testimonials">
       <div class="container">
           <div class="title">
               <h5>Testimonials</h5>
@@ -134,7 +134,7 @@
               </div>
           </div>
       </div>
-  </section>
+  </section> -->
 
   <div class="container-1">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3785.8161099599024!2d76.55718150000001!3d18.40121855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcf83e66026bdd5%3A0xceca04e561ff167b!2sDayanand%20Science%20College%2C%20Prakash%20Nagar%2C%20Latur%2C%20Maharashtra%20413531!5e0!3m2!1smr!2sin!4v1677404292102!5m2!1smr!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
