updated icons and links in download

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
         <tr>
           <td>01</td>
           <td>Mamata Choudhari</td>
-          <td><a href="mailto:www.mamatas1509@gmail@gmail.com"><i class="fa fa-sandesh"></i></a></td>
+          <td><a href="mailto:www.mamatas1509@gmail.com"><i class="fa fa-sandesh"></i></a></td>
         </tr>
         <tr>
           <td>02</td>
