--- a/downloads.html
+++ b/downloads.html
@@ -73,18 +73,17 @@
             <div class="content">
                   <div class="space">
                 <h2 >Semester 1:</h2>
-                <a target="_blank" href="notes/botany/sub 1/Botany I - sem 1 I,III,IV.pdf">Viruses, Bateria, Algae, Fungi Lichens & Arycorrhise</a><br>
-                <a target="_blank" href="notes/botany/sub 2/Botany II - sem 1 all 2nd.pdf">Plant Ecology & Phytogeogsaphy</a><br>
-                <a target="_blank" href="notes/botany/sub 2/Botany II - sem 1 all.pdf">Plant Ecology & Phytogeogsaphy</a><br>
+                <a target="_blank" href="https://drive.google.com/file/d/1-f4xq0UDgXv6X1oE1DbO8AS78TnbNwgM/view?usp=share_link">Viruses, Bateria, Algae, Fungi Lichens & Arycorrhise</a><br>
+                <a target="_blank" href="">Plant Ecology & Phytogeogsaphy</a><br>
                 <h2>Semester 2:</h2>
-                <a target="_blank" href="notes/botany/sub 1/Botany I - sem 2 I,IV.pdf">Bryaphytes, Pteridoptrypes, gymnosperms & Paleobotany</a><br>
-                <a target="_blank" href="notes/botany//sub 2/Botany II - sem 2 all.pdf">Taxonomy of Angiosperms</a>
+                <a target="_blank" href="https://drive.google.com/file/d/1RmB4lYYiN7JyiANXyXhuW63RbPpIzEVp/view?usp=sharing">Bryaphytes, Pteridoptrypes, gymnosperms & Paleobotany</a><br>
+                <a target="_blank" href="">Taxonomy of Angiosperms</a>
                 <h2>Semester 3:</h2>
                 <a target="_blank" href="">Plant Anatomy VI</a><br>
-                <a target="_blank" href="">Plant Physiology And Biochemistry</a>
+                <a target="_blank" href="https://drive.google.com/file/d/1YpW4MW5LmxA0U-OPW7Wq7gSgQ-DuwNvq/view?usp=share_link">Plant Physiology And Biochemistry</a>
                 <h2>Semester 4:</h2>
-                <a target="_blank" href="notes/botany/sub 1/Botany">Ecology and Enviornmental Biology</a><br>
-                <a target="_blank" href="notes/botany//sub 2/Botany II - sem 4 all.pdf">Plant Embryology</a>
+                <a target="_blank" href="">Ecology and Enviornmental Biology</a><br>
+                <a target="_blank" href="">Plant Embryology</a>
                 <h2>Semester 5:</h2>
                 <a target="_blank" href="">Cell & Molecular Biology</a><br>
                 <a target="_blank" href="">Plant Pathology</a>
@@ -152,20 +151,29 @@
               <div class="content">
                   <div class="space">
                     <h2 >Semester 1:</h2>
-                    <a target="_blank" href=""></a><br>
-                    <a target="_blank" href=""></a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1Bj-uRBIAeoEPNJazW4XRF4sImR2kyNvr/view?usp=share_link"></a>Web Technology<br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1G-m0Aqq9ZHZ97byOmXBCh9NlgQeVRtdB/view?usp=share_link"></a>C programming Part - I<br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1YJgbcyvmhn6JYiS3-hrOzQ2ZFv9OUfth/view?usp=share_link"></a>Basic of Computer System<br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1-kaIt18p1yMtZFEYBv2cvHd04KmZm0Yb/view?usp=share_link"></a>Fundamental of Digital Electronics<br>
                     <h2 >Semester 2:</h2>
+                    <a target="_blank" href="https://drive.google.com/file/d/1kWrP9V44RrVViJVjWB3YJ-4HgNx2JLOJ/view?usp=share_link"></a>C programming part - 2<br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1sN6sb36SHiydAjGEcnvrixlL6Biu4TrA/view?usp=share_link">Operating System</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1sN6sb36SHiydAjGEcnvrixlL6Biu4TrA/view?usp=share_link">Database Management System</a><br>
                     <a target="_blank" href=""></a><br>
-                    <a target="_blank" href=""></a><br>
+
                     <h2 >Semester 3:</h2>
-                    <a target="_blank" href=""></a><br>
-                    <a target="_blank" href=""></a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1J0WgwGytjLcOfF_4XzrJ7CZriEvE0eqE/view?usp=share_link">Computer Networks</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/12TxX838Ew66HUFyu98OArX31acRYYvcw/view?usp=share_link">RDBMS</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1WU0myesf23qdPa0M5ZwNmQWCWUXtaq2T/view?usp=share_link">C++</a><br>
                     <h2 >Semester 4:</h2>
-                    <a target="_blank" href=""></a><br>
-                    <a target="_blank" href=""></a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1EC4Sz1PK_HxrBMZGyJGime7lB-uao2Bz/view?usp=share_link">Compiler Design</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1EC4Sz1PK_HxrBMZGyJGime7lB-uao2Bz/view?usp=share_link">Software Engineering</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1icfpmcfX3Ik6UBJTKnHhp4c8CjXcFCeE/view?usp=share_link">Java Programminig</a><br>
                     <h2 >Semester 5:</h2>
-                    <a target="_blank" href=""></a><br>
-                    <a target="_blank" href=""></a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1EqAy37FTiViZ_I2jpcXgdb_J5Pg-p_pi/view?usp=share_link">Python</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1KqNyMXJCmBdYfuHJ8tj5aPcv1aHJ_pk-/view?usp=share_link">Quality Concepts</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1LOTxOvrBqvqP091pVSdC88MwokuANW3e/view?usp=share_link">Data Science</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1QEJ1pqfyCjhPj_kemiQRRqwAUIZ0O-N-/view?usp=share_link">Window application</a><br>
                     <h2 >Semester 6:</h2>
                     <a target="_blank" href=""></a><br>
                     <a target="_blank" href=""></a><br>
@@ -191,8 +199,8 @@
                     <a target="_blank" href=""></a><br>
                     <a target="_blank" href=""></a><br>
                     <h2 >Semester 5:</h2>
-                    <a target="_blank" href=""></a><br>
-                    <a target="_blank" href=""></a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1VPN6w8iJsPDpuejNN9b15bAbyjSdpFVM/view?usp=share_link">Ecology & Zoogeography (P-XII)</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1cndqnyPZt61b5MkiyUrKnCaqzimuuwtw/view?usp=share_link">Pisciculture Elective- (P-XIII)</a><br>
                     <h2 >Semester 6:</h2>
                     <a target="_blank" href=""></a><br>
                     <a target="_blank" href=""></a><br>
@@ -289,20 +297,21 @@
               <div class="content">
                   <div class="space">
                     <h2 >Semester 1:</h2>
-                    <a target="_blank" href=""></a><br>
-                    <a target="_blank" href=""></a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/16IF0iN6aGj64VV1Px7_wrM-w7KTiKWTh/view?usp=share_link">Taxonomy & General Topics (P-I)</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1nD2z06viaD7vRvvOtdgSr7QU6fkvM6XN/view?usp=share_link">Types Study -Wallago attu (P-II)</a><br>
                     <h2 >Semester 2:</h2>
                     <a target="_blank" href=""></a><br>
                     <a target="_blank" href=""></a><br>
                     <h2 >Semester 3:</h2>
-                    <a target="_blank" href=""></a><br>
-                    <a target="_blank" href=""></a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/19yQaXTgxDZNZWSJt9h-ZdF723Xg16RW7/view?usp=share_link">cology & Fish Pathology (P-VI)</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1vckvVF4WVYkasUT48MwxPt-L2fVZG5IS/view?usp=share_link">Fish Development Biology (P-VII)</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1Ip0SGoIjuStQukljPsee-hWLvNVmX0XS/view?usp=share_link">Fish Development Biology (P-VII)</a><br>
                     <h2 >Semester 4:</h2>
                     <a target="_blank" href=""></a><br>
                     <a target="_blank" href=""></a><br>
                     <h2 >Semester 5:</h2>
-                    <a target="_blank" href=""></a><br>
-                    <a target="_blank" href=""></a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1O7f4wHV94bF_hlPs59fw3ljgapvazrJW/view?usp=share_link">Aquaculture Technique & Fish Nutrition (P-XIII)</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1vFeu1CG5tctVYn936mlnPXvtQFpT-6fP/view?usp=share_link">Mari culture & Indian Fisheries (P-XII)</a><br>
                     <h2 >Semester 6:</h2>
                     <a target="_blank" href=""></a><br>
                     <a target="_blank" href=""></a><br>
