--- a/downloads.html
+++ b/downloads.html
@@ -151,12 +151,12 @@
               <div class="content">
                   <div class="space">
                     <h2 >Semester 1:</h2>
-                    <a target="_blank" href="https://drive.google.com/file/d/1Bj-uRBIAeoEPNJazW4XRF4sImR2kyNvr/view?usp=share_link"></a>Web Technology<br>
-                    <a target="_blank" href="https://drive.google.com/file/d/1G-m0Aqq9ZHZ97byOmXBCh9NlgQeVRtdB/view?usp=share_link"></a>C programming Part - I<br>
-                    <a target="_blank" href="https://drive.google.com/file/d/1YJgbcyvmhn6JYiS3-hrOzQ2ZFv9OUfth/view?usp=share_link"></a>Basic of Computer System<br>
-                    <a target="_blank" href="https://drive.google.com/file/d/1-kaIt18p1yMtZFEYBv2cvHd04KmZm0Yb/view?usp=share_link"></a>Fundamental of Digital Electronics<br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1Bj-uRBIAeoEPNJazW4XRF4sImR2kyNvr/view?usp=share_link">Web Technology</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1G-m0Aqq9ZHZ97byOmXBCh9NlgQeVRtdB/view?usp=share_link">C programming Part - I</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1YJgbcyvmhn6JYiS3-hrOzQ2ZFv9OUfth/view?usp=share_link">Basic of Computer System</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1-kaIt18p1yMtZFEYBv2cvHd04KmZm0Yb/view?usp=share_link">Fundamental of Digital Electronics</a><br>
                     <h2 >Semester 2:</h2>
-                    <a target="_blank" href="https://drive.google.com/file/d/1kWrP9V44RrVViJVjWB3YJ-4HgNx2JLOJ/view?usp=share_link"></a>C programming part - 2<br>
+                    <a target="_blank" href="https://drive.google.com/file/d/1kWrP9V44RrVViJVjWB3YJ-4HgNx2JLOJ/view?usp=share_link">C programming part - 2</a><br>
                     <a target="_blank" href="https://drive.google.com/file/d/1sN6sb36SHiydAjGEcnvrixlL6Biu4TrA/view?usp=share_link">Operating System</a><br>
                     <a target="_blank" href="https://drive.google.com/file/d/1sN6sb36SHiydAjGEcnvrixlL6Biu4TrA/view?usp=share_link">Database Management System</a><br>
                     <a target="_blank" href=""></a><br>
