--- a/downloads.html
+++ b/downloads.html
@@ -157,7 +157,7 @@
                     <a target="_blank" href="https://drive.google.com/file/d/1-kaIt18p1yMtZFEYBv2cvHd04KmZm0Yb/view?usp=share_link">Fundamental of Digital Electronics</a><br>
                     <h2 >Semester 2:</h2>
                     <a target="_blank" href="https://drive.google.com/file/d/1kWrP9V44RrVViJVjWB3YJ-4HgNx2JLOJ/view?usp=share_link">C programming part - 2</a><br>
-                    <a target="_blank" href="https://drive.google.com/file/d/1sN6sb36SHiydAjGEcnvrixlL6Biu4TrA/view?usp=share_link">Operating System</a><br>
+                    <a target="_blank" href="https://drive.google.com/file/d/135l0NZaiKj_DJzPh3gIVy4XPqMEu5KB1/view">Operating System</a><br>
                     <a target="_blank" href="https://drive.google.com/file/d/1sN6sb36SHiydAjGEcnvrixlL6Biu4TrA/view?usp=share_link">Database Management System</a><br>
                     <a target="_blank" href=""></a><br>
 
